syntax = "proto3";

package auth;
option go_package = "github.com/yehudamakarov/proto/auth";

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

message LogoutRequest {
  string email = 1;
}

message LogoutResponse {
  bool logged_out = 1;
}

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Logout(LogoutRequest) returns (LogoutResponse);
}